--- a/Config/account/account-local.properties
+++ b/Config/account/account-local.properties
@@ -1,2 +1,6 @@
 prop1=welcome to
 prop2= configuration server
+account.getAccountDetails.url.mapping=/getAccount
+
+eureka.instance.appname=${spring.application.name}
+eureka.client.service-url.defaultZone=http://localhost:9193/eureka/
