--- a/Config/eureka-local.properties
+++ b/Config/eureka-local.properties
@@ -1,5 +1,6 @@
 server.port=9193
 spring.application.name=eureka
+spring.profiles.active=local
 eureka.client.service-url.defaultZone=http://localhost:9193/eureka/
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
