--- a/Config/gateway-local.properties
+++ b/Config/gateway-local.properties
@@ -1,7 +1,7 @@
 spring.application.name=gateway
 # N.B. this is the default:
 server.port=9092
-spring.profiles.active=dev
+spring.profiles.active=local
 
 eureka.instance.appname=${spring.application.name}
 eureka.client.service-url.defaultZone=http://localhost:9193/eureka/
