--- a/Config/eureka-local.properties
+++ b/Config/eureka-local.properties
@@ -1,6 +1,8 @@
 server.port=9193
 spring.application.name=eureka
 spring.profiles.active=local
+spring.cloud.config.uri=http://localhost:8800
+spring.cloud.config.server.git.clone-on-start=true
 eureka.client.service-url.defaultZone=http://localhost:9193/eureka/
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
