--- a/Config/gateway-local.properties
+++ b/Config/gateway-local.properties
@@ -2,6 +2,8 @@ spring.application.name=gateway
 # N.B. this is the default:
 server.port=9092
 spring.profiles.active=local
+spring.cloud.config.uri=http://localhost:8800
+spring.cloud.config.server.git.clone-on-start=true
 
 eureka.instance.appname=${spring.application.name}
 eureka.client.service-url.defaultZone=http://localhost:9193/eureka/
