--- a/Config/eureka-local.properties
+++ b/Config/eureka-local.properties
@@ -1,4 +1,5 @@
 server.port=9193
 
+eureka.client.service-url.defaultZone=http://localhost:9193/eureka/
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
