--- a/Config/account-local.properties
+++ b/Config/account-local.properties
@@ -5,5 +5,5 @@ spring.cloud.config.uri=http://localhost:8800
 spring.cloud.config.server.git.clone-on-start=true
 
 account.getAccountDetails.url.mapping=/getAccount
-eureka.instance.appname=${spring.application.name}
-eureka.client.service-url.defaultZone=http://localhost:9193/eureka/
+#eureka.instance.appname=${spring.application.name}
+#eureka.client.service-url.defaultZone=http://localhost:9193/eureka/
