--- a/Config/gateway-local.properties
+++ b/Config/gateway-local.properties
@@ -10,5 +10,5 @@ zuul.routes.account.path=/account/**
 zuul.routes.account.service-id=account
 
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
-#ribbon.eureka.enabled=true
+ribbon.eureka.enabled=false
 #ribbon.ServerListRefreshInterval=1
