--- a/Config/gateway-local.properties
+++ b/Config/gateway-local.properties
@@ -3,12 +3,12 @@ spring.application.name=gateway
 server.port=9092
 
 
-#eureka.instance.appname=${spring.application.name}
-#eureka.client.service-url.defaultZone=http://localhost:9193/eureka/
+eureka.instance.appname=${spring.application.name}
+eureka.client.service-url.defaultZone=http://localhost:9193/eureka/
 
 zuul.routes.account.path=/account/**
 zuul.routes.account.service-id=account
 
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
-ribbon.eureka.enabled=false
-#ribbon.ServerListRefreshInterval=1
+ribbon.eureka.enabled=true
+ribbon.ServerListRefreshInterval=1
