--- a/Config/eureka-local.properties
+++ b/Config/eureka-local.properties
@@ -1,6 +1,6 @@
 server.port=9193
 spring.application.name=eureka
-spring.cloud.config.server.git.clone-on-start=true
+#spring.cloud.config.server.git.clone-on-start=true
 eureka.client.service-url.defaultZone=https://mypcfeureka.cfapps.io/
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
