--- a/Config/account-local.properties
+++ b/Config/account-local.properties
@@ -3,4 +3,4 @@ spring.cloud.config.server.git.clone-on-start=true
 account.getAccountDetails.url.mapping=/getAccount
 eureka.instance.appname=${spring.application.name}
 #eureka.client.service-url.defaultZone=http://localhost:9193/eureka/
-eureka.client.service-url.defaultZone=https://mypcfeureka.cfapps.io/
+eureka.client.service-url.defaultZone=https://mypcfeureka.cfapps.io/eureka/
