--- a/Config/gateway-local.properties
+++ b/Config/gateway-local.properties
@@ -1,10 +1,11 @@
 spring.application.name=gateway
 # N.B. this is the default:
-server.port=9092
+#server.port=9092
 
 
 eureka.instance.appname=${spring.application.name}
-eureka.client.service-url.defaultZone=http://localhost:9193/eureka/
+#eureka.client.service-url.defaultZone=http://localhost:9193/eureka/
+eureka.client.service-url.defaultZone=https://mypcfeureka.cfapps.io/eureka/
 
 zuul.routes.account.path=/account/**
 zuul.routes.account.service-id=account
