--- a/Config/gateway-local.properties
+++ b/Config/gateway-local.properties
@@ -7,8 +7,11 @@ eureka.instance.appname=${spring.application.name}
 #eureka.client.service-url.defaultZone=http://localhost:9193/eureka/
 eureka.client.service-url.defaultZone=https://mypcfeureka.cfapps.io/eureka/
 
-zuul.routes.account.path=/account/**
-zuul.routes.account.service-id=account
+#zuul.routes.account.path=/account/**
+#zuul.routes.account.service-id=account
+
+zuul.routes.account.path=https://mypcfaccount.cfapps.io/
+zuul.routes.account.service-id=https://mypcfaccount.cfapps.io/
 
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
 ribbon.eureka.enabled=true
