--- a/Config/gateway-local.properties
+++ b/Config/gateway-local.properties
@@ -11,7 +11,7 @@ eureka.client.service-url.defaultZone=https://mypcfeureka.cfapps.io/eureka/
 #zuul.routes.account.service-id=account
 
 zuul.routes.account.path=https://mypcfaccount.cfapps.io/
-zuul.routes.account.service-id=https://mypcfaccount.cfapps.io/
+zuul.routes.account.service-id=account
 
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
 ribbon.eureka.enabled=true
