--- a/Config/gateway-local.properties
+++ b/Config/gateway-local.properties
@@ -10,7 +10,8 @@ eureka.client.service-url.defaultZone=https://mypcfeureka.cfapps.io/eureka/
 #zuul.routes.account.path=/account/**
 #zuul.routes.account.service-id=account
 
-zuul.routes.account.path=https://mypcfaccount.cfapps.io/
+zuul.routes.account.path=/account/**
+zuul.routes.servicea.appendPrefix=https://mypcfaccount.cfapps.io/
 zuul.routes.account.service-id=account
 
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
