--- a/Config/eureka-local.properties
+++ b/Config/eureka-local.properties
@@ -1,3 +1,4 @@
 spring.application.name=eureka
-eureka.client.service-url.defaultZone=https://mypcfeureka.cfapps.io/
+eureka.instance.appname=${spring.application.name}
+eureka.client.service-url.defaultZone=http://localhost:9193/eureka/
 
