--- a/Config/account/application.properties
+++ b/Config/account/application.properties
@@ -1,3 +1,5 @@
+server.port=9191
+spring.application.name=account
 eureka.instance.appname=${spring.application.name}
 eureka.instance.instanceId= ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${server.port}}
 eureka.instance.metadataMap.instanceId= ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${server.port}}
