--- a/Config/eureka-local.properties
+++ b/Config/eureka-local.properties
@@ -1,3 +1,4 @@
+server.port=9090
 spring.application.name=eureka
 eureka.instance.appname=${spring.application.name}
 eureka.client.service-url.defaultZone=http://localhost:9090/eureka/
