--- a/conf/account/account.properties
+++ b/conf/account/account.properties
@@ -1,4 +1,4 @@
-server.port=9191
+#server.port=9191
 spring.application.name=account
 eureka.instance.appname=${spring.application.name}
 eureka.instance.instanceId= ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${server.port}}
