--- a/Config/account-local.properties
+++ b/Config/account-local.properties
@@ -1,5 +1,6 @@
 spring.application.name=account
 spring.cloud.config.server.git.clone-on-start=true
 account.getAccountDetails.url.mapping=/getAccount
+accountService.print.url.mapping=/print
 eureka.instance.appname=${spring.application.name}
 eureka.client.service-url.defaultZone=http://localhost:9090/eureka/
